# ds_project_template_cookiecutter

./: .gitignore  README.md  pyproject.toml  setup.py
archive/: Makefile
archive/docs/: Makefile  conf.py  index.rst  make.bat
src/utils/: paths.py
